fixing side scroll on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,14 @@
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0px;
   padding: 0px;
   color: black;
   width: 100vw;
   height: 100vh;
-  overflow-x: hidden;
+  position: relative;
   background: white;
   background-color: white;
   font-family: 'Open Sans', sans-serif;
